--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "## **Date:** 10/20/2022 ***",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,10 @@
   },
   "homepage": "https://github.com/ralicynf/recipedia#readme",
   "dependencies": {
+    "express": "^4.18.2",
     "mongoose": "^6.6.6"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
