--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/ralicynf/recipedia#readme",
   "dependencies": {
+    "axios": "^1.1.3",
     "express": "^4.18.2",
-    "mongoose": "^6.6.6"
+    "mongoose": "^6.6.6",
+    "react-axios": "^2.0.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
